force-app/main/default/objects/Program_Attendance__c/Program_Attendance__c.object-meta.xml
<CustomObject>
    <description>Contact who attends a specific Session of a Program. 
Junction object connecting Contact with Session.</description>
    <label>Program Attendance</label>
    <nameField>
        <displayFormat>Attendance-{0000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>