force-app/main/default/objects/Program_Attendance__c/fields/Barcode_Scanned__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Scanned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically checked by scanning process if attendance record created by scan.  Use in reporting to identify scanned attendance records.</description>
    <inlineHelpText>Automatically checked by scanning process if attendance record created by scan.  Use in reporting to identify scanned attendance records.</inlineHelpText>
    <label>Barcode Scanned</label>
    <type>Checkbox</type>
</CustomField>