force-app/main/default/objects/Program_Attendance__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Name of Attendee displayed for last-name sorting in Lightning Components. Not shown on page layout.</description>
    <formula>Contact__r.LastName + ", " +  Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>