force-app/main/default/objects/Program_Attendance__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Referenced by Apex logic in TakeAttendance and ManageRegistrations. Auto-populated by Apex or Process Builder.</description>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Attendance</relationshipLabel>
    <relationshipName>Program_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>