force-app/main/default/objects/Program_Attendance__c/fields/Program_Session__c.field-meta.xml
<CustomField>
    <fullName>Program_Session__c</fullName>
    <label>Program Session</label>
    <referenceTo>Program_Session__c</referenceTo>
    <relationshipLabel>Program Attendance</relationshipLabel>
    <relationshipName>Program_Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>