force-app/main/default/objects/Program_Attendance__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>