force-app/main/default/objects/Program_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Program_Session__c</columns>
    <columns>Program__c</columns>
    <columns>Program_Name__c</columns>
    <columns>ServiceDate__c</columns>
    <columns>Barcode_Scanned__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>